fix account config z-index

--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -98,6 +98,7 @@
         gap: 0.75rem;
         border-radius: 5px 0 0 5px;
         box-shadow: var(--box-shadow);
+        z-index: 998;
 
         @media (min-width: @grid-break) {
           top: calc(~'100% + 1rem');
